# SPC-services

./: .gitignore  README.md  bar.ino  example.env  pyproject.toml
client/: __init__.py  __main__.py  qrcodereader.py
contract/: contract.sol  wallet.py
contracts/: ParkingLot.sol  __init__.py  wallet.py
documentation/: README.md
parkingmachine/: __init__.py  __main__.py  servo.py
public/: index.html
tests/: test_parking_lot.py
