[tool.poetry]
name = "spc-services"
version = "0.1.0"
description = "Smart Parking Credits Services"
authors = ["Smart Parking Credits Team"]
license = "MIT"
readme = "README.md"
packages = [{ include = "contracts" }, { include = "client" }]

[tool.poetry.dependencies]
python = "^3.9"
web3 = "^6.15.1"
py-solc = "^3.2.0"


[tool.poetry.group.dev.dependencies]
web3 = "^6.15.1"
py-solc-x = "^2.0.2"
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
